js/js.translator/testData/incremental/invalidation/privateDeclarationLeakThroughDefaultParam/main/f.4.kt
private fun prop() = "3"

internal inline fun foo(lambda: () -> String = { "4" }): String {
    return lambda()
}
